--- a/G3-1/OOP/HW4/makefile
+++ b/G3-1/OOP/HW4/makefile
@@ -2,13 +2,9 @@ CPP	=	g++
 CC_FLAGS	=	-std=c11
 CPP_FLAGS	=	-std=c++11
 
-all : file_handle	main	combine
-file_handle:
-	g++ $(CPP_FLAGS) file_handle.cpp -c
+all : main
 main:
-	g++ $(CPP_FLAGS) main.cpp -c
-combine:
-	g++ $(CPP_FLAGS) main.o file_handle.o -o main_lex
+	g++ $(CPP_FLAGS) main.cpp -o	main_lex
 
 
 .PHONY:clean
@@ -19,4 +15,3 @@ clean:
 
 dep:
 	$(CPP)	$(CPP_FLAGS)	main.cpp		-MM	>	main.dep
-	$(CPP)	$(CPP_FLAGS)	file_handle.cpp		-MM	>	file_handle.dep
